force-app/main/default/objects/MS_Teams_Record_Link__c/MS_Teams_Record_Link__c.object-meta.xml
<CustomObject>
    <description>Associates a meeting with an authorized Salesforce record. Target IDs and object types must be validated by the application.</description>
    <label>MS Teams Record Link</label>
    <nameField>
        <displayFormat>TRL-{00000000}</displayFormat>
        <label>Record Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Teams Record Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>