force-app/main/default/objects/MS_Teams_Record_Link__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>Application-generated unique key: 18-character meeting ID, colon, 18-character record ID.</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>