force-app/main/default/objects/MS_Teams_Record_Link__c/fields/Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Schedule__c</fullName>
    <label>Meeting Schedule</label>
    <referenceTo>MS_Team_Call_Schedule__c</referenceTo>
    <relationshipLabel>MS Teams Record Links</relationshipLabel>
    <relationshipName>MS_Teams_Record_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>