force-app/main/default/objects/MS_Teams_Record_Link__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name matching the referenced record, such as Account or DHS_Lead__c.</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>