force-app/main/default/objects/MS_Teams_Record_Link__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Canonical 18-character Salesforce ID. Application must verify target existence, supported object type, and user access.</description>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>