force-app/main/default/objects/MS_Teams_Record_Link__c/fields/Record_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Label__c</fullName>
    <description>Optional cached display label; refresh after access checks and never use for authorization.</description>
    <label>Record Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>