force-app/main/default/objects/MS_Teams_Record_Link__c/fields/Relationship_Role__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Role__c</fullName>
    <label>Relationship Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
                <default>true</default>
                <label>Related</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>